fix : assgin multiple students
