# app/Modules/Assignment/DTOs/CreateAssignmentDTO.php
@@ -6,7 +6,8 @@ class CreateAssignmentDTO
 {
     public function __construct(
         public string $test_id,
-        public string $assignee_id,
+        public ?string $assignee_id,
+        public ?array $assignee_ids,
         public string $assigned_by,
         public string $access_type,
         public ?string $due_at = null,
